Fixed Container.css, LinkElement is now wrapped in Link component from react-router-dom library, removed unnecessary files Attraction and Error

--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -1,5 +1,5 @@
 .container {
-    margin: 0 auto;
-    padding: 0 16px;
-    width: calc(var(--container-width) + 16px * 2 );
+	margin: 0 auto;
+	padding: 0 16px;
+	width: calc(var(--container-width) + 32px);
 }
